# analizator_wydatkow

./: .gitignore  agents.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  todo.txt
accounts/: views.py
analizator_wydatkow/: asgi.py  settings.py  urls.py  wsgi.py
categories/: apps.py  models.py  signals.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_seed_predefined_categories.py
context/archive/: README.md
context/changes/: README.md
context/changes/auth-scaffold/: change.md  plan-brief.md  plan.md
context/changes/auth-scaffold/reviews/: impl-review.md
context/changes/bootstrap-verification/: verification.md
context/changes/category-management/: change.md  plan-brief.md  plan.md
context/changes/category-management/reviews/: impl-review.md
context/changes/csv-import-autocategorize/: change.md  plan-brief.md  plan.md
context/changes/csv-import-autocategorize/reviews/: impl-review.md
context/foundation/: README.md  infrastructure.md  my_idea.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md
templates/: base.html  dashboard.html
templates/categories/: category_confirm_delete.html  category_form.html  category_list.html
templates/registration/: logged_out.html  login.html  register.html
templates/transactions/: transaction_list.html
transactions/: apps.py  categorization.py  csv_parser.py  forms.py  models.py  signals.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_seed_unknown_category.py  0003_seed_predefined_mappings.py
